# django-nova

./: README.EN.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: architecture.md  index.md  installation.md
example_project/: models.py
src/nova/: __init__.py
src/nova/admin/: api.py  components.py
src/nova/async_orm/: manager.py  queryset.py
src/nova/cache/: invalidation.py  queryset_cache.py
src/nova/core/: config.py  exceptions.py
src/nova/db/: splitter.py  zero_downtime.py
src/nova/tasks/: decorators.py  engine.py
src/nova/typing/: fields.py  models.py  querysets.py
src/nova/validation/: pydantic_bridge.py  unified.py
tests/: apps.py  conftest.py  models.py  test_full_integration.py
tests/cache/: test_queryset_cache.py
tests/typing/: test_typed_models.py
